[package]
name = "cubesteak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown = "1.0.0-alpha.9"
pico-args = "0.5.0"
upon = { version = "0.6.0", default-features = false, features = ["filters", "unicode"] }
walkdir = "2.3.3"
